# dycer

./: README.md  dycer.cabal  stack.yaml  tools.sh
dycer-blend/: __init__.py  link-addon.sh  test.blend
src/: Lib.hs
src/Dycer/Blender/: Types.hs
