name:                dycer
version:             0.1.0.0
synopsis:            Experimental breadth-first raytracer
description:         Please see README.md
homepage:            https://github.com/githubuser/dycer#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          Jonathan Merritt <j.s.merritt@gmail.com>
copyright:           2016 Jonathan Merritt
category:            Graphics
build-type:          Simple
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector

executable dycer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dycer
  default-language:    Haskell2010

test-suite dycer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dycer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lancelet/dycer
